<resources>
    <string name="app_name">Serlan App</string>

    <string-array name="galpones_array">
        <item>Sin datos</item>
    </string-array>

    <string name="nav_header_title">SERLAN VENTAS</string>
    <string name="app_version">Versión %1$s</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">Bienvenido</string>
    <string name="name_estatus">PRUEBA</string>
    <string name="name_user">Nombre Usuario</string>
    <string name="name_rol">Nombre Rol</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="select_galpon_prompt">Galpones</string>
    <string name="select_nucleo_prompt">Nucleos</string>
    <string name="select_pesos_prompt">Lista de Pesos</string>

    <!--    NAVECACION-->
    <string name="pesajes">Pesajes</string>
    <string name="reportes">Reportes</string>
    <string name="localdata">Datos Locales</string>
    <string name="configuration">Configuración</string>

    <!--    ITEMS-->
    <string name="menu_bt_balanza">Balanza</string>
    <string name="menu_pesos">Pesajes</string>
    <string name="menu_GuiasWeb">Guías</string>
    <string name="menu_NucleoGalponWeb">Núcleo/Galpón</string>
    <string name="menu_VentasAppWeb">Ventas</string>
    <string name="menu_impresora">Impresora</string>
    <string name="cerrar">Cerrar</string>
    <string name="login">CONECTARSE</string>
    <string name="mode_production">PRODUCCIÓN</string>
    <string name="mode_testing">PRUEBA</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="filters_title">Filtros</string>
    <string name="calendar_icon_description">Icono de calendario</string>
    <string name="clients_icon_description">Icono de clientes</string>
    <string name="start_date_hint">Fecha de inicio</string>
    <string name="end_date_hint">Fecha de fin</string>
    <string name="client_hint">Cliente</string>
    <string name="client_selection_description">Campo para seleccionar un cliente</string>
    <string name="clear_filters">Limpiar</string>
    <string name="search">Buscar</string>

</resources>