<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="12dp">

        <!-- Título de filtros -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/filters_title"
            android:textColor="@color/purple_500"
            android:textSize="16sp"
            android:textStyle="bold" />

        <!-- Fila superior con fechas de inicio y fin -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <!-- Filtro por fecha de inicio -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/calendar_icon_description"
                    android:src="@drawable/ic_calendario" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/start_date_filter_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/start_date_hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/start_date_filter_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:inputType="date" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <!-- Filtro por fecha de fin -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/calendar_icon_description"
                    android:src="@drawable/ic_calendario" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/end_date_filter_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/end_date_hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/end_date_filter_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:inputType="date" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <!-- Botón de búsqueda -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/searchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:backgroundTint="@color/purple_700"
                android:text="@string/search"
                android:textAllCaps="false"
                app:cornerRadius="8dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_sincronizar_all_ventas"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                app:icon="@drawable/baseline_cloud_24"
                app:cornerRadius="8dp"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/cardview_dark_background"/>
        </LinearLayout>


        <!-- Filtro por cliente -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/clients_icon_description"
                android:src="@drawable/icon_clientes" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/client_filter_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Seleccione un cliente">

                <AutoCompleteTextView
                    android:id="@+id/client_filter_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:completionThreshold="1" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#D1C4B7"
                android:gravity="center"
                android:paddingBottom="6dp"
                android:text="LISTA DE VENTAS REALIZADAS"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewVentas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:elevation="2dp"
                android:padding="8dp" />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
